--- a/notes_of_java/01.java_notes/001.JAVA基础_前要知识.md
+++ b/notes_of_java/01.java_notes/001.JAVA基础_前要知识.md
@@ -15,6 +15,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. java 跨平台性的实现
 - 通过编写源代码, 然后 javac 将其编译成字节码文件   
   然后由 JVM 识别并运行
