--- a/notes_of_java/01.java_notes/003.JAVA基础_数据类型.md
+++ b/notes_of_java/01.java_notes/003.JAVA基础_数据类型.md
@@ -14,6 +14,11 @@
 
 <!-- /TOC -->
 
+
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. java 的数据类型
 - 分为两大类型: 基本数据类型和引用数据类型
 - 基本数据类型又称为原生数据类型, 引用数据类型又称为对象数据类型
