--- a/notes_of_java/01.java_notes/005.JAVA基础_流程语句.md
+++ b/notes_of_java/01.java_notes/005.JAVA基础_流程语句.md
@@ -19,6 +19,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. JAVA 中的流程语句
 
 ### 1.1. 顺序结构
