--- a/notes_of_java/01.java_notes/007.JAVA基础_JVM内存模型.md
+++ b/notes_of_java/01.java_notes/007.JAVA基础_JVM内存模型.md
@@ -6,6 +6,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. JAVA 中的虚拟机
 
 ### 1.1. JVM 内存划分
