--- a/notes_of_java/01.java_notes/008.JAVA基础_数组的概念和基本操作.md
+++ b/notes_of_java/01.java_notes/008.JAVA基础_数组的概念和基本操作.md
@@ -20,6 +20,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 一维数组
 
 ### 1.1. 数组的定义
