--- a/notes_of_java/01.java_notes/010.JAVA面向对象_面向过程和面向对象.md
+++ b/notes_of_java/01.java_notes/010.JAVA面向对象_面向过程和面向对象.md
@@ -14,6 +14,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 面向过程
 
 ### 1.1. 定义　  
