--- a/notes_of_java/01.java_notes/014.JAVA面向对象_类中变量的作用域和生命周期.md
+++ b/notes_of_java/01.java_notes/014.JAVA面向对象_类中变量的作用域和生命周期.md
@@ -8,6 +8,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 类中的变量
 
 ### 1.1. 变量根据在类中定义位置的分类
