--- a/notes_of_java/01.java_notes/016.JAVA面向对象_封装的概念.md
+++ b/notes_of_java/01.java_notes/016.JAVA面向对象_封装的概念.md
@@ -7,6 +7,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 封装
 
 ### 1.1. 封装的定义
