--- a/notes_of_java/01.java_notes/017.JAVA面向对象_权限访问修饰符.md
+++ b/notes_of_java/01.java_notes/017.JAVA面向对象_权限访问修饰符.md
@@ -13,6 +13,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 类的访问权限控制
 - 封装实际上是要让一些类看不到另外一些类做了什么事情.   
 因此 java 提供了访问权限修饰符来规定在一个类里面能看到什么, 能暴露什么. 
