--- a/notes_of_java/01.java_notes/018.JAVA面向对象_javabean规范.md
+++ b/notes_of_java/01.java_notes/018.JAVA面向对象_javabean规范.md
@@ -12,6 +12,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. javabean 规范
 - javabean 是一种 java 语言写成的可重用性组件(类)
 
