--- a/notes_of_java/01.java_notes/023.JAVA面向对象_Object类和常用方法.md
+++ b/notes_of_java/01.java_notes/023.JAVA面向对象_Object类和常用方法.md
@@ -12,6 +12,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. Object 类
 - `Object` 类是 java 语言的最高级父类,  
 - 它要么是一个类的直接父类, 要么就是一个类的间接父类.
