--- a/notes_of_java/01.java_notes/006.JAVA基础_方法.md
+++ b/notes_of_java/01.java_notes/006.JAVA基础_方法.md
@@ -17,6 +17,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. JAVA 中的方法
 
 ### 1.1. 方法的定义和调用
