--- a/notes_of_java/01.java_notes/011.JAVA面向对象_类和对象.md
+++ b/notes_of_java/01.java_notes/011.JAVA面向对象_类和对象.md
@@ -11,6 +11,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 类和对象的概念和关系
 
 ### 1.1. 对象的概念
