--- a/notes_of_java/01.java_notes/012.JAVA面向对象_类的构造器.md
+++ b/notes_of_java/01.java_notes/012.JAVA面向对象_类的构造器.md
@@ -9,6 +9,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 类的构造器
 
 ### 1.1. 构造器的概念
