--- a/notes_of_java/01.java_notes/013.JAVA面向对象_static修饰符.md
+++ b/notes_of_java/01.java_notes/013.JAVA面向对象_static修饰符.md
@@ -9,6 +9,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. static 修饰符
 
 ### 1.1. 定义
