--- a/notes_of_java/01.java_notes/019.JAVA面向对象_this关键字.md
+++ b/notes_of_java/01.java_notes/019.JAVA面向对象_this关键字.md
@@ -13,6 +13,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. this 关键字
 
 ### 1.1. this 的定义
