--- a/notes_of_java/01.java_notes/021.JAVA面向对象_类中方法覆盖和方法字段隐藏现象.md
+++ b/notes_of_java/01.java_notes/021.JAVA面向对象_类中方法覆盖和方法字段隐藏现象.md
@@ -15,6 +15,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 类中的方法覆盖现象
 
 ### 1.1. 覆写的定义
