--- a/notes_of_java/01.java_notes/022.JAVA面向对象_super关键字和子类实际初始化过程.md
+++ b/notes_of_java/01.java_notes/022.JAVA面向对象_super关键字和子类实际初始化过程.md
@@ -12,6 +12,10 @@
 
 ## 1. super 关键字
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ### 1.1. 定义
 - `super` 是指当前类对象的直接父类对象的引用
 
