--- a/notes_of_java/01.java_notes/025.JAVA面向对象_引用类型转换和instanceof运算符.md
+++ b/notes_of_java/01.java_notes/025.JAVA面向对象_引用类型转换和instanceof运算符.md
@@ -6,6 +6,9 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
 
 ## 1. 基本数据类型转换
 - 自动类型转换:  
