--- a/notes_of_java/01.java_notes/030.JAVA面向对象_抽象方法和抽象类的概念和其它概念的区别.md
+++ b/notes_of_java/01.java_notes/030.JAVA面向对象_抽象方法和抽象类的概念和其它概念的区别.md
@@ -15,6 +15,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 抽象方法
 
 ### 1.1. 定义:  
