--- a/notes_of_java/01.java_notes/031.JAVA面向对象_接口的概念和要点及与其它概念的区别.md
+++ b/notes_of_java/01.java_notes/031.JAVA面向对象_接口的概念和要点及与其它概念的区别.md
@@ -22,6 +22,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 接口的基础要点
 
 ### 1.1. 接口的概念
