--- a/notes_of_java/01.java_notes/033.JAVA面向对象_枚举类型的概念及操作.md
+++ b/notes_of_java/01.java_notes/033.JAVA面向对象_枚举类型的概念及操作.md
@@ -11,6 +11,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 枚举类型
 
 ### 1.1. 枚举类的概述
