--- a/notes_of_java/01.java_notes/034.JAVA常用类_用户和程序交互.md
+++ b/notes_of_java/01.java_notes/034.JAVA常用类_用户和程序交互.md
@@ -7,6 +7,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 用户和和程序交互
 - 要让程序接收到用户的输入数据有三种方式
   - `mian` 方法接收数据
