--- a/notes_of_java/01.java_notes/035.JAVA常用类_系统相关类.md
+++ b/notes_of_java/01.java_notes/035.JAVA常用类_系统相关类.md
@@ -11,6 +11,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 常用类-系统相关类(java.lang)
 - 在 `java.lang` 中可以找到以下类.
 - 系统相关类中最常用的有两个类
