--- a/notes_of_java/01.java_notes/037.JAVA常用类_字符串相关类.md
+++ b/notes_of_java/01.java_notes/037.JAVA常用类_字符串相关类.md
@@ -10,6 +10,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 常用类_字符串相关类(java.lang)
 - 在 java.lang 中能找到一下类.
 - 与字符串相关的类中最常用的有以下三个:  
