--- a/notes_of_java/01.java_notes/038.JAVA常用类_String类.md
+++ b/notes_of_java/01.java_notes/038.JAVA常用类_String类.md
@@ -36,6 +36,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. String 类的相关概念
 - 不可变的字符串, 内容不可改变. 
 
