--- a/notes_of_java/01.java_notes/039.JAVA常用类_StringBuilder和StringBuffer类.md
+++ b/notes_of_java/01.java_notes/039.JAVA常用类_StringBuilder和StringBuffer类.md
@@ -16,6 +16,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. StringBuilder 和 StringBuffer 类的相关概念
 
 ### 1.1. 三种字符串拼接效率对比
