--- a/notes_of_java/01.java_notes/040.JAVA常用类_随机数相关类.md
+++ b/notes_of_java/01.java_notes/040.JAVA常用类_随机数相关类.md
@@ -17,6 +17,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 随机数相关类
 - 随机数相关类有以下三个
   - `Random` 类 (java.util)
