--- a/notes_of_java/01.java_notes/043.JAVA异常处理_异常处理机制.md
+++ b/notes_of_java/01.java_notes/043.JAVA异常处理_异常处理机制.md
@@ -15,6 +15,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 异常处理机制
 **异常的定义:**  
 - 异常并非指语法错误, 语法错误是无法通过编译的, 并不会产生字节码文件.
