--- a/notes_of_java/01.java_notes/046.JAVA线程_并行和并发&进程和线程.md
+++ b/notes_of_java/01.java_notes/046.JAVA线程_并行和并发&进程和线程.md
@@ -20,6 +20,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 并行和并发
 
 ### 1.1. 概念和区别
