--- a/notes_of_java/01.java_notes/048.JAVA线程_创建线程操作.md
+++ b/notes_of_java/01.java_notes/048.JAVA线程_创建线程操作.md
@@ -26,6 +26,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. JAVA 操作线程
 - 创建和启动线程, 有两种传统的方式:  
   - 方式1: 继承 Thread 类(`java.lang.Thread`)
