--- a/notes_of_java/01.java_notes/049.JAVA线程_线程同步.md
+++ b/notes_of_java/01.java_notes/049.JAVA线程_线程同步.md
@@ -27,6 +27,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 线程同步的方式
 有三种保证线程同步的方法:  
 - 同步代码块
