--- a/notes_of_java/01.java_notes/050.JAVA线程_线程通信的实现和死锁现象.md
+++ b/notes_of_java/01.java_notes/050.JAVA线程_线程通信的实现和死锁现象.md
@@ -25,6 +25,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 线程通信的概念和实现
 - 不同的线程执行不同的任务, 若这些任务有联系, 线程之间必须能够通信才能协调完成工作.  
 
