--- a/notes_of_java/01.java_notes/052.JAVA线程_线程控制操作和优先级.md
+++ b/notes_of_java/01.java_notes/052.JAVA线程_线程控制操作和优先级.md
@@ -17,6 +17,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 线程控制操作
 
 ### 1.1. 线程休眠
