--- a/notes_of_java/01.java_notes/053.JAVA线程_定时器和线程组.md
+++ b/notes_of_java/01.java_notes/053.JAVA线程_定时器和线程组.md
@@ -12,6 +12,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 定时器
 - 在 JDK 的 `java.util` 包中, 提供了 `Timer` 类, 可以定时执行特定的任务.  
 
