--- a/notes_of_java/01.java_notes/054.JAVA集合框架_概述.md
+++ b/notes_of_java/01.java_notes/054.JAVA集合框架_概述.md
@@ -12,6 +12,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 集合框架的概述
 - JAVA2之前, JAVA中并没有完整的集合框架, 只有一些简单的可自拓展的容器类,  
   比如 `Vector, Stack, Hashtable` 等类. 尽管这些可自拓展的容器类很好用,  
