--- a/notes_of_java/01.java_notes/055.JAVA集合框架_List接口及其实现类.md
+++ b/notes_of_java/01.java_notes/055.JAVA集合框架_List接口及其实现类.md
@@ -18,6 +18,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. List 接口及其实现类
 - 根据 `Vector` 类, `Stack` 类, `ArrayList` 类和 `LinkedList` 类,  
   这四个实现类所拥有的存储特点方法进行总结, 得出共同特点:  
