--- a/notes_of_java/01.java_notes/058.JAVA集合框架_Set接口及其实现类.md
+++ b/notes_of_java/01.java_notes/058.JAVA集合框架_Set接口及其实现类.md
@@ -15,6 +15,9 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
 
 ## 1. Set 接口及其实现类
 - 一个不包含重复元素的 `collection`. 此接口模仿了数学上的 `set` 抽象.
