--- a/notes_of_java/01.java_notes/060.JAVA集合框架_Map接口及其实现类.md
+++ b/notes_of_java/01.java_notes/060.JAVA集合框架_Map接口及其实现类.md
@@ -15,6 +15,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. Map 接口及其实现类
 - `Map` 是一种映射关系的集合, 它将键映射到值的对象.   
   一个映射不能包含重复的键; 每个键最多只能映射到一个值.  
