--- a/notes_of_java/01.java_notes/064.JAVA输入输出_文件流.md
+++ b/notes_of_java/01.java_notes/064.JAVA输入输出_文件流.md
@@ -21,6 +21,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 文件流
 - 顾名思义, 就是用来访问和操作文件的流对象.
 - 文件流根据四大基流可以分为四种:  
