--- a/notes_of_java/01.java_notes/068.JAVA输入输出_打印流.md
+++ b/notes_of_java/01.java_notes/068.JAVA输入输出_打印流.md
@@ -7,6 +7,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 打印流
 - 打印流是用来打印数据进行输出的, 因此打印流只能是输出流.
 - 打印流根据字节字符类型分为两种, 如下所示:    
