--- a/notes_of_java/01.java_notes/069.JAVA输入输出_标准IO操作和扫描器类.md
+++ b/notes_of_java/01.java_notes/069.JAVA输入输出_标准IO操作和扫描器类.md
@@ -10,6 +10,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 标准IO操作
 - 标准的 IO:
   - 标准的输入: 通过键盘录入数据给程序.
