--- a/notes_of_java/01.java_notes/071.JAVA输入输出_数据流和随机访问文件类.md
+++ b/notes_of_java/01.java_notes/071.JAVA输入输出_数据流和随机访问文件类.md
@@ -7,6 +7,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 数据流
 - 提供了可以读写任意数据类型的方法.  
 
