--- a/notes_of_java/01.java_notes/072.JAVA输入输出_管道流实现线程通信.md
+++ b/notes_of_java/01.java_notes/072.JAVA输入输出_管道流实现线程通信.md
@@ -5,6 +5,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 管道流
 - 管道流用于实现线程之间的数据交互, 但通常来说这个并不使用.
 - 管道流根据输入输出和字节字符类型一共有四种:  
