--- a/notes_of_java/01.java_notes/087.JAVA反射机制_通过反射加载资源文件.md
+++ b/notes_of_java/01.java_notes/087.JAVA反射机制_通过反射加载资源文件.md
@@ -10,6 +10,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 通过反射加载资源文件
 - 加载 `properties` 资源文件, 只能使用 `Properties` 类的 `load()` 方法.
 
