--- a/notes_of_java/01.java_notes/088.JAVA拓展_JAVA5和JAVA7的新特性.md
+++ b/notes_of_java/01.java_notes/088.JAVA拓展_JAVA5和JAVA7的新特性.md
@@ -5,6 +5,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. JAVA5 的新特性
 - 静态引入(<a href = "015.JAVA面向对象_package和import关键字.md">link</a>)
 
