--- a/notes_of_java/01.java_notes/089.JAVA拓展_JAVA5的新特性_注解.md
+++ b/notes_of_java/01.java_notes/089.JAVA拓展_JAVA5的新特性_注解.md
@@ -13,6 +13,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 注解(Annotation)
 
 ### 1.1. 注解的概述
