--- a/notes_of_java/01.java_notes/090.JAVA拓展_JAVA8的新特性_接口的默认方法.md
+++ b/notes_of_java/01.java_notes/090.JAVA拓展_JAVA8的新特性_接口的默认方法.md
@@ -10,6 +10,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 接口中的默认方法
 - 在 JAVA8 中允许接口中存在定义默认的实现方法.
 - 用关键字 `default` 来定义接口的默认实现方法.
