--- a/notes_of_java/01.java_notes/091.JAVA拓展_JAVA8的新特性_lambda表达式.md
+++ b/notes_of_java/01.java_notes/091.JAVA拓展_JAVA8的新特性_lambda表达式.md
@@ -21,6 +21,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. Lambda 表达式的概述
 - JAVA8 中加入了函数式编程, 对于并行开发和基于事件开发十分便利.
 
