--- a/notes_of_java/01.java_notes/094.JAVA拓展_DOM4J的概述.md
+++ b/notes_of_java/01.java_notes/094.JAVA拓展_DOM4J的概述.md
@@ -9,6 +9,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. DOM4J 的概述
 - DOM4J 是一个 java 的 XML API, 是 JDOM 的升级品, 用来更便捷地读取 XML 文件.
 
