--- a/notes_of_java/01.java_notes/024.JAVA面向对象_多态的概念.md
+++ b/notes_of_java/01.java_notes/024.JAVA面向对象_多态的概念.md
@@ -16,6 +16,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 多态的概念和补充
 
 ### 1.1. 对象具有两种类型
