--- a/notes_of_java/01.java_notes/026.JAVA面向对象_代码块.md
+++ b/notes_of_java/01.java_notes/026.JAVA面向对象_代码块.md
@@ -9,6 +9,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 代码块
 
 ### 1.1. 代码块的定义
