--- a/notes_of_java/01.java_notes/028.JAVA面向对象_单例设计模式和工具类的设计.md
+++ b/notes_of_java/01.java_notes/028.JAVA面向对象_单例设计模式和工具类的设计.md
@@ -11,6 +11,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 单例设计模式
 
 ### 1.1. 设计模式(design pattern)的定义
