--- a/notes_of_java/01.java_notes/032.JAVA面向对象_内部类的概念及其四种类型.md
+++ b/notes_of_java/01.java_notes/032.JAVA面向对象_内部类的概念及其四种类型.md
@@ -19,6 +19,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 内部类
 - 定义在类结构中的另一个类称之为内部类
 
