--- a/notes_of_java/01.java_notes/036.JAVA常用类_数学相关类.md
+++ b/notes_of_java/01.java_notes/036.JAVA常用类_数学相关类.md
@@ -16,6 +16,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 常用类_数学相关类(java.math)
 - 在 `java.math` 中可以找到以下类.
 - 常用的数学相关的类有三个:  
