--- a/notes_of_java/01.java_notes/042.JAVA常用类_正则表达式.md
+++ b/notes_of_java/01.java_notes/042.JAVA常用类_正则表达式.md
@@ -6,6 +6,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 正则表达式相关类
 - Pattern 类(java.util.regex.Pattern)
 - Matcher 类(java.util.regex.Matcher)
