--- a/notes_of_java/01.java_notes/044.JAVA异常处理_try-catch-finally的使用.md
+++ b/notes_of_java/01.java_notes/044.JAVA异常处理_try-catch-finally的使用.md
@@ -17,6 +17,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 使用 try-catch 捕获单个异常
 
 ### 1.1. 执行语法  
