--- a/notes_of_java/01.java_notes/045.JAVA异常处理_抛出异常和自定义异常类.md
+++ b/notes_of_java/01.java_notes/045.JAVA异常处理_抛出异常和自定义异常类.md
@@ -13,6 +13,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 抛出异常相关关键字
 - `throw` 关键字
 - `throws` 关键字
