--- a/notes_of_java/01.java_notes/051.JAVA线程_线程的生命周期.md
+++ b/notes_of_java/01.java_notes/051.JAVA线程_线程的生命周期.md
@@ -12,6 +12,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 线程的生命周期  
 
 ### 1.1. 线程生命周期状态图
