--- a/notes_of_java/01.java_notes/059.JAVA集合框架_集合的排序以及Comparable和Comparator接口.md
+++ b/notes_of_java/01.java_notes/059.JAVA集合框架_集合的排序以及Comparable和Comparator接口.md
@@ -10,6 +10,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 集合的排序规则
 - 集合排序中值得注意的是:  
   - `Collections.sort()` 方法只支持 `List` 接口的实现类进行排序.  
