--- a/notes_of_java/01.java_notes/066.JAVA输入输出_转换流和内存流和合并流.md
+++ b/notes_of_java/01.java_notes/066.JAVA输入输出_转换流和内存流和合并流.md
@@ -9,6 +9,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. 转换流
 - 作用是将字节流转换成字符流, 因此转换流只存在两种:  
   - `InputStreamReader`: 把字节输入流转换成字符输入流
