--- a/notes_of_java/01.java_notes/070.JAVA输入输出_Properties类加载资源文件.md
+++ b/notes_of_java/01.java_notes/070.JAVA输入输出_Properties类加载资源文件.md
@@ -7,6 +7,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. Properties 类
 
 ### 1.1. 配置文件的概述
