--- a/notes_of_java/01.java_notes/082.JAVA反射机制_Class类和Class实例.md
+++ b/notes_of_java/01.java_notes/082.JAVA反射机制_Class类和Class实例.md
@@ -14,6 +14,10 @@
 
 <!-- /TOC -->
 
+****
+<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+****
+
 ## 1. Class 类
 - 该类的实例表示正在运行的 Java 应用程序中的类和接口(运行时的状态).
 
