--- a/notes_of_java/01.java_notes/022.JAVA面向对象_super关键字和子类实际初始化过程.md
+++ b/notes_of_java/01.java_notes/022.JAVA面向对象_super关键字和子类实际初始化过程.md
@@ -13,7 +13,7 @@
 ## 1. super 关键字
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ### 1.1. 定义
