--- a/notes_of_java/01.java_notes/038.JAVA常用类_String类.md
+++ b/notes_of_java/01.java_notes/038.JAVA常用类_String类.md
@@ -37,7 +37,7 @@
 <!-- /TOC -->
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 1. String 类的相关概念
