--- a/notes_of_java/01.java_notes/050.JAVA线程_线程通信的实现和死锁现象.md
+++ b/notes_of_java/01.java_notes/050.JAVA线程_线程通信的实现和死锁现象.md
@@ -26,7 +26,7 @@
 <!-- /TOC -->
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 1. 线程通信的概念和实现
