--- a/notes_of_java/01.java_notes/090.JAVA拓展_JAVA8的新特性_接口的默认方法.md
+++ b/notes_of_java/01.java_notes/090.JAVA拓展_JAVA8的新特性_接口的默认方法.md
@@ -11,7 +11,7 @@
 <!-- /TOC -->
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 1. 接口中的默认方法
