--- a/notes_of_java/01.java_notes/006.JAVA基础_方法.md
+++ b/notes_of_java/01.java_notes/006.JAVA基础_方法.md
@@ -18,7 +18,7 @@
 <!-- /TOC -->
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 1. JAVA 中的方法
