--- a/notes_of_java/01.java_notes/027.JAVA面向对象_final修饰符.md
+++ b/notes_of_java/01.java_notes/027.JAVA面向对象_final修饰符.md
@@ -9,7 +9,7 @@
 <!-- /TOC -->
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 1. final 关键字
