--- a/notes_of_java/01.java_notes/036.JAVA常用类_数学相关类.md
+++ b/notes_of_java/01.java_notes/036.JAVA常用类_数学相关类.md
@@ -17,7 +17,7 @@
 <!-- /TOC -->
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 1. 常用类_数学相关类(java.math)
