--- a/notes_of_java/01.java_notes/055.JAVA集合框架_List接口及其实现类.md
+++ b/notes_of_java/01.java_notes/055.JAVA集合框架_List接口及其实现类.md
@@ -19,7 +19,7 @@
 <!-- /TOC -->
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 1. List 接口及其实现类
