--- a/notes_of_java/01.java_notes/060.JAVA集合框架_Map接口及其实现类.md
+++ b/notes_of_java/01.java_notes/060.JAVA集合框架_Map接口及其实现类.md
@@ -16,7 +16,7 @@
 <!-- /TOC -->
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 1. Map 接口及其实现类
