--- a/notes_of_java/01.java_notes/065.JAVA输入输出_包装流的概念和缓冲流.md
+++ b/notes_of_java/01.java_notes/065.JAVA输入输出_包装流的概念和缓冲流.md
@@ -28,7 +28,7 @@
 ****
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 2. 缓冲流
