--- a/notes_of_java/01.java_notes/091.JAVA拓展_JAVA8的新特性_lambda表达式.md
+++ b/notes_of_java/01.java_notes/091.JAVA拓展_JAVA8的新特性_lambda表达式.md
@@ -22,7 +22,7 @@
 <!-- /TOC -->
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 1. Lambda 表达式的概述
