--- a/notes_of_java/01.java_notes/094.JAVA拓展_DOM4J的概述.md
+++ b/notes_of_java/01.java_notes/094.JAVA拓展_DOM4J的概述.md
@@ -10,7 +10,7 @@
 <!-- /TOC -->
 
 ****
-<a href='https://github.com/leon9dragon'><h3>[点击] 博主的 Github 地址</h3></a>
+[博主的 Github 地址](https://github.com/leon9dragon)
 ****
 
 ## 1. DOM4J 的概述
