--- a/notes_of_java/01.java_notes/001.JAVA基础_前要知识.md
+++ b/notes_of_java/01.java_notes/001.JAVA基础_前要知识.md
@@ -46,7 +46,7 @@
   文件名是所编写的每个源文件的类名加后缀 .class  
 3. 然后通过启动 JVM 并执行字节码文件
 
-![image of progress](https://raw.githubusercontent.com/leon9dragon/notes_of_java/master/99.images/20200323084923.png)
+![pic](../../99.images/2021-04-05-00-51-43.png)
 
 ## 4. 环境变量
 
