--- a/notes_of_java/01.java_notes/007.JAVA基础_JVM内存模型.md
+++ b/notes_of_java/01.java_notes/007.JAVA基础_JVM内存模型.md
@@ -13,7 +13,7 @@
 ## 1. JAVA 中的虚拟机
 
 ### 1.1. JVM 内存划分
-![image of jvm](https://raw.githubusercontent.com/leon9dragon/notes_of_java/master/99.images/20200323085111.png)
+![pic](../../99.images/2021-04-05-00-52-37.png)
 - 程序计数器:  
   当前线程所执行的字节码的行号指示器
 - 本地方法栈:  
