--- a/notes_of_java/01.java_notes/009.JAVA基础_参数值传递机制.md
+++ b/notes_of_java/01.java_notes/009.JAVA基础_参数值传递机制.md
@@ -15,7 +15,7 @@
 ## 1. JAVA 中的值传递
 
 ### 1.1. 基本数据类型的传递机制-值传递
-![image01](https://raw.githubusercontent.com/leon9dragon/notes_of_java/master/99.images/20200323090357.png)
+![pic](../../99.images/2021-04-05-00-53-41.png)
 
 - 在方法被调用时, 实参通过形参把它的内容副本传入方法内部,  
 此时形参接收到的内容是实参值的一个拷贝,  
@@ -29,7 +29,7 @@
   形参在方法结束后其在栈中开辟的空间会被自动清理掉.
 
 ### 1.2. 引用数据类型的传递机制-引用传递
-![image 02](https://raw.githubusercontent.com/leon9dragon/notes_of_java/master/99.images/20200323091431.png)
+![pic](../../99.images/2021-04-05-00-54-01.png)
 
 - "引用"也就是指向真实内容的地址值, 在方法调用时,  
   实参的地址通过方法调用被传递给相应的形参,  
