--- a/notes_of_java/01.java_notes/056.JAVA集合框架_集合的迭代操作.md
+++ b/notes_of_java/01.java_notes/056.JAVA集合框架_集合的迭代操作.md
@@ -235,7 +235,7 @@ for(Iterator iterator = list.iterator(); iterator.hasNext();){
 ```
 
 ### 5.2. 并发修改异常
-- 当需要一边迭代集合元素, 一百年删除指定的元素时,  
+- 当需要一边迭代集合元素, 一边删除指定的元素时,  
   只能使用迭代器, 不能使用 `for-each` 进行操作.
 
 #### 5.2.1. 并发修改异常的产生原因
